Avoids a dangling pointer.

When doKill is called on KGetJobAdapter or KGetGlobalJob requestStop(KJob*, TransferHandler*) is emitted.
KUiServerJob reacts on that:
*unregisters the job if it was registered
*stops the transfer or all transfers if transfer is 0.
That way the job is unregistered before its KWidgetJobTracker is destroyed avoiding a crash.
BUG:265681

svn path=/trunk/KDE/kdenetwork/kget/; revision=1219468